compiler/tests/en/errors/pure_void.salam
// EXPECT: E012
pure func nothing(x i32):
    y auto = x
end

func main:
    nothing(1)
end
